Linux: Don't propagate $GNOME_DISABLE_CRASH_DIALOG to external apps.

BUG=24120
TEST=none
Review URL: http://codereview.chromium.org/548071

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@36569 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: a8ed096e8c3962073c785d70528f49f5a1b0a871